# alice

./: #alice.dxf  CHANGELOG.rst  README.rst  alice-Site.dxf  alice.20250721-121835.FCBak  alice.20250721-135411.FCBak  alice.20250723-143633.FCBak  alice.FCStd  alice.dxf  house-test.20250724-121522.FCBak  house-test.FCStd  pyproject.toml
.github/workflows/: action.yml
docsrc/: conf.py  index.rst  intro.rst
docsrc/modules/: index.rst
src/illumiphi/alice/: __init__.py  alice.py  app.py
